<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/popupFilterLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:background="@drawable/popup_bg">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/black_text_bold"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_marginBottom="24dp"
                android:text="Trouvez votre Réunion" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:text="Date : " />

            <TextView
                android:id="@+id/textResultDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:text="Du ... /... /... au ... /... /..." />

            <TextView
                android:id="@+id/btnSelectDate"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="Sélectionner une date"
                android:contentDescription="@string/date"
                android:textColor="@color/white"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_valide_shape"/>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_marginVertical="16dp"
                android:background="@color/black_text_bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"
                android:text="Tranche Horaire :" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="De" />

                <Spinner
                    android:id="@+id/minHourSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/hourMin"/>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="à" />

                <Spinner
                    android:id="@+id/maxHourSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/hourMax"/>


            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:layout_marginVertical="16dp"
                android:background="@color/black_text_bold" />

            <TextView
                android:id="@+id/titleReunionRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="Salle de réunion :" />

            <MultiAutoCompleteTextView
                android:id="@+id/multiSelectRoom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="salle B"
                android:completionThreshold="1"
                android:contentDescription="@string/room"/>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/buttonBackAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="Retour"
                    android:contentDescription="@string/btnBack"/>

                <TextView
                    android:id="@+id/buttonFilterAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:padding="4dp"
                    android:background="@drawable/button_valide_shape"
                    android:text="Filtrer"
                    android:contentDescription="@string/btnSave"/>
            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>
</layout>