<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.025"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.975"/>


    <ImageView
        android:id="@+id/logoReunion"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_lamzone"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV85"
        app:layout_constraintStart_toStartOf="@+id/guidelineV15"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Nouvelle Réunion"
        android:textAlignment="center"
        android:textColor="@color/black_text_bold"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoReunion" />


    <LinearLayout
        android:id="@+id/inputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV85"
        app:layout_constraintStart_toStartOf="@+id/guidelineV15"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <LinearLayout
            android:id="@+id/dateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Date de réunion :"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="20 Avril 2024"
                android:textSize="18dp"
                android:contentDescription="@string/date"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Heure de réunion :"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:gravity="center"
                android:layout_weight="1"
                android:text="10h55"
                android:textSize="18dp"
                android:contentDescription="@string/hour"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/roomLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewRoom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Salle disponible :"
                android:textSize="18dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerRoomsSelection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_weight="1"
                android:contentDescription="@string/room"/>
        </LinearLayout>

        <EditText
            android:id="@+id/subjectReunionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/subject"
            android:inputType="text"
            android:contentDescription="@string/subject"/>

        <MultiAutoCompleteTextView
            android:id="@+id/multiSelectionParticipant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:completionThreshold="1"
            android:hint="@string/participants"
            android:contentDescription="@string/participants"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_valide_shape"
            android:clickable="true"
            android:padding="12dp"
            android:text="Retour"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            android:contentDescription="@string/btnBack"/>

        <TextView
            android:id="@+id/saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/button_unfocus_shape"
            android:clickable="true"
            android:padding="12dp"
            android:text="Enregistrer"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            android:contentDescription="@string/btnSave"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>